# Preset-Curator-Demo

./: .env.example  LICENSE  README.md  app.py  audio_processor.py  config.py  feature_database.py  main.py  pyproject.toml  render.yaml
static/css/: custom.css  style.css
static/js/: app.js  visualization.js
templates/: base.html  index.html
