[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.13",
    "botocore>=1.37.13",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "librosa>=0.11.0",
    "numpy>=2.1.3",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "umap-learn>=0.5.7",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.1",
]
